--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -41,19 +41,19 @@
   present: "Graduate student at University of California at Davis"
   year: '2016'
 - name: Saibal De
-  year: '2016'
   degree: Bachelor of Science (Research)
-  present: "Graduate stud
+  present: "Graduate student at University of Michigan"
   year: '2016'
-  degree: Bachelor of Scient at University of Michigan"
-- name: Sandip Sinhaence (Research)
+- name: Sandip Sinha
+  degree: Bachelor of Science (Research)
   present: "Graduate student at Columbia University"
-- name: Kolharkar Sampada Chandrashekhar
   year: '2016'
+- name: Kolharkar Sampada Chandrashekhar
   degree: Bachelor of Science (Research)
+  year: '2016'
 - name: Sayyad Irfan Ali
-  year: '2017'
   degree: Bachelor of Science (Research)
+  year: '2017'
 - name: Amal Roy
   year: '2017'
   degree: Bachelor of Science (Research)
