--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -304,7 +304,7 @@
 - name : Abhratanu Saha
   degree : Bachelor of Science (Research) & Master of Science
   year : '2020'
-- name : K Philip Thomas
+- name : K. Philip Thomas
   degree : Bachelor of Science (Research) & Master of Science
   present: "Graduate student at University of Oregon"
   year : '2020'
