--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -258,7 +258,7 @@
   year : '2020'
 - name : Manan Bhatia
   degree : Bachelor of Science (Research)
-  present: "ICTS Bangalore"
+  present: "ICTS Bangalore; Massachusetts Institute of Technology"
   year : '2020'
 - name : Vishnu Teja Bondalakunta                       
   degree : Bachelor of Science (Research)
