--- a/_data/phd-alumni.yaml
+++ b/_data/phd-alumni.yaml
@@ -839,6 +839,7 @@
   year: 2012
   title: Grushin multipliers and Toeplitz operators
   advisor: S. Thangavelu
+  present: Assistant Professor, IISER Mohali
 
 - name: Gururaja H. A.
   year: 2012
@@ -949,7 +950,7 @@
   year: 2015
   title: Weighted norm inequalities for Weyl multipliers and Hermite pseudo-multipliers
   advisor: S. Thangavelu
-  present: ISI Kolkata (DST Inspire Postdoc)
+  present: Assistant Professor, IISER Kolkata
 
 - name: Bidyut Sanki
   year: 2015
@@ -1103,3 +1104,10 @@
   year: 2020	
   title: Geometric invariants for a class of submodules of analytic Hilbert modules	
   advisor: Gadadhar Misra
+  
+- name: Sourav Hait	
+  year: 2020	
+  title: Sparse bounds for various maximal functions
+  advisor: S. Thangavelu
+  
+  
