Updated Postdocs Alumni

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -4,19 +4,46 @@
 - name: Jaban Meher
   position: Assistant Professor, NISER Bhubaneshwar
 - name: Asha Kisan Dond
+  position: Assist. Prof, IISER, Thiruvananthapuram
 - name: Dipendu Maity
 - name: Bikramaditya Sahu
 - name: Tamal Pramanick
 - name: Abhitosh Upadhyay
 - name: Vishnu Priya Nataraj
 - name: Anirudha Poria
+  position: Post-doc Bar-Ilan University, Israel
 - name: Abhash Kumar Jha
 - name: Tathagata Banerjee
 - name: Kaustubh Manchanda
-
-
-
-
+- name: Sanjoy Pusti
+  position: Assist. Prof. IIT, Mumbai
+- name: Rajesh K. Srivastava
+  position: Asso. Prof., IIT, Guwahati 
+- name: Ashisha Kumar
+  position: Assist. Prof., IIT, Indore
+- name: R. Lakshmi Lavanya
+  position: Assist. Prof., IISER, Thiruphathi          
+- name: Qaiser Jahan
+  position: Asst. Prof., IIT, Mandi
+- name: K. Kalaivani
+  position: Assist. Prof, VIT, Vellore
+- name: M. Rajesh
+  position: Professor, University of Conception, Chili
+- name: Saroj Panigrahi
+  position: Professor, Hyderabad Central University
+- name: Muslim Malik
+  position: Associate Professor, IIT Mandi
+- name: T. Muthukumar
+  position: Associate Professor, IIT Kanpur
+- name: Manojkumar
+- name: T. V. Anoop
+  position: Assistant Professor, IIT Chennai
+- name: Dhanya Rajendran
+  position: Assistant Professor, IISER, Thiruvananthapuram
+- name: Tanmay Sarkar
+  position: Assistant Professor, IIT Jammu
+- name: S. Aiyappan
+  position: Post Doc, Fraunhofer, ITWM,  Germany
 
 
 
