--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -139,6 +139,7 @@
 - name: Ankit Kumar Jaiswal
   degree: Bachelor of Science (Research) & Master of Science
   year: '2017'
+  present: "Alstom, Bangalore"
 - name: Rahul Singh
   degree: Bachelor of Science (Research) & Master of Science
   year: '2017'
